--- a/filtus/man/filters.html
+++ b/filtus/man/filters.html
@@ -4,7 +4,7 @@
 
 </head>
 <body>
-<h1 style="color: black;">Filters</h1>
+<h1 style="color: black;">Filtering variants</h1>
 <div style="text-align: center;"><img alt="Filter area" height="230" src="pictures/filter_area.png"><br></div>
 <h2 style="color: black;">Special filters</h2>
 <p>The first four filters consist of a check box and a labeled
@@ -64,7 +64,7 @@ region file.
 <h2 style="color: black;">Column filters</h2>
 <p>These basic filters work directly on columns
 in each of the loaded samples. Each column filter is defined by 4
-entities: Column name, operator, value and the "keep if missing" check
+entities: Column name, operator, value and the "keep if missing" (KIM) check
 box.</p>
 <dl>
 <dt><strong>Column name</strong></dt><dd>
