--- a/filtus/man/filtus.html
+++ b/filtus/man/filtus.html
@@ -15,7 +15,7 @@ does not require an internet connection. This may be an important point
 if you are not allowed to be online when working with human
 sequence data.<br>
 </big><span style="font-weight: bold;"><br>
-</span><big>The latest version of Filtus is 0.99-94. Take a
+</span><big>The latest version of Filtus is 1.0.1. Take a
 look at the <a href="FILTUS/Filtus_changelog.txt" target="_top">changelog</a>
 to see recent developments.</big><big> Questions,
 bug reports, feature requests and other comments are welcome by email
@@ -58,7 +58,7 @@ features.</li>
 <h2>Download and installation</h2>
 <strong>WINDOWS</strong><br>
 <ul>
-<li>Download the latest version <a href="FILTUS/Filtus_0.99-94.zip">here</a>
+<li>Download the latest version <a href="FILTUS/Filtus1.0.1.zip">here</a>
 and unpack the zip-file in any location you prefer. To start the
 program, simply double-click on the file Filtus.exe in the
 unpacked folder.</li>
@@ -80,29 +80,27 @@ Filtus leaves no footprint on your computer.</li>
 </ol>
 <br>
 <h3>MAC/LINUX</h3>
-There are no executables for these systems, but if you have
-Python 2.7 installed you are welcome to download the source files
-and run Filtus from a command line. <br>
 <ul>
-<li>Download the source files <a href="FILTUS/Filtus_0.99-94_SOURCE.zip">here</a> and unpack
+<li>If you have pip installed, automatic installation can be done by <span style="font-family: Courier New;">pip install filtus</span> in a terminal.</li>
+<li>Alternatively, you are welcome to download the source files
+and run Filtus from a command line:
+<ul>
+<li>Download the source files <a href="FILTUS/Filtus1.0.1_SOURCE.zip">here</a> and unpack
 the zip-file in a location of your choice.</li>
 <li>Open a terminal and move to the unpacked Filtus folder.</li>
-<li>To start the program, execute the command<span style="font-family: Courier New;"> python Filtus.py</span><br>
+<li>To start the program, use the command <span style="font-family: Courier New;">python Filtus.py</span><br>
 </li>
 </ul>
-Note:<br>
+</ul>
+Requirements when running FILTUS from source files:<br>
 <ol>
-<li>You need Python version 2.7.x where x is at least 3. (Get
+<li>Python version 2.7.x where x is at least 3. (Get
 it from <a href="http://www.python.org/download/">python.org</a>
 if you don't have it.) In particular, Python 3 will not work.  </li>
 <li>For the plotting functionality (QC plots) to work, the two
 Python packages <a href="http://sourceforge.net/projects/numpy/">numpy</a>
 and <a href="http://matplotlib.org/downloads.html">matplotlib</a>
-must be installed on your system. Make sure you download the version
-compatible with your operating system and Python 2.7. On Mac OSX
-version 10.6 or later these installations should be quick and easy.
-Linux can be a little trickier, but there's plenty of information on
-the package's websites.</li>
+must be installed on your system.</li>
 </ol>
 <br>
 <hr style="width: 100%; height: 2px;">
