--- a/filtus/man/loading.html
+++ b/filtus/man/loading.html
@@ -12,7 +12,6 @@ Loading variant files
 <a href="#prerequisites">Prerequisites</a>&nbsp;&nbsp;
 <a href="#dialog">Dialogs</a>&nbsp;&nbsp;
 <a href="#tips">Practical tips</a>&nbsp;&nbsp;
-<a href="#algorithm">Algorithm</a>
 
 <h2 id="description" style="color: black;">Description</h2><p>
 This page describes how to load variant files into Filtus. The short story is as follows:
@@ -25,7 +24,7 @@ This page describes how to load variant files into Filtus. The short story is as
 </ul>
 <p>For more details, continue reading.</p>
 
-<h2 style="color: black;">Prerequisites</h2>
+<h2 id="prerequisites" style="color: black;">Prerequisites</h2>
 Filtus is very liberal when it comes to file formats. Basically, the only requirements are:
 <ul>
 <li>Each line describes one variant position. (Files with initial meta information are allowed.)</li>
@@ -49,7 +48,7 @@ A typical example would be a column <em>zygosity</em>, with entries <em>het</em>
 </li>
 </ul>
 
-<h2 style="color: black;">Dialogs</h2>
+<h2 id="dialog" style="color: black;">Dialogs</h2>
 <h3 style="color: black;">Load files (simple)</h3>
 <p>This opens a standard window for choosing one or several files
 in a single folder. You can use usual keyboard tricks, such as
@@ -153,7 +152,5 @@ For large variant files it is highly recommended to apply a well chosen prefilte
 <p><em>Tip 2:</em> 
 When loading a single file, <strong>Use for all files</strong> is synonymous to <strong>Use for this file</strong>.</p>
 
-<h2 id="algorithm" style="color: black;">Algorithm</h2><p>
-Not relevant.
 
 </body></html>
